renderização do actionbar

--- a/test/template/app/index.html
+++ b/test/template/app/index.html
@@ -8,10 +8,25 @@
             padding: 0px;
             font-family: 'FontAwesome';
         }
+
+        view {
+            height: 300px;
+            width: 400px;
+            border: solid 1px;
+        }
     </style>
 </head>
 
-<body id='app'>
+<body>
+    <div class="view">
+        <label> nome:
+            <input type="text" /> </label>
+        <label> endereço:
+            <input type="text" /> </label>
+        <label> telefone:
+            <input type="text" /> </label>
+        <div id='app'></div>
+    </div>
     <script src="bundle.js"></script>
 </body>
 
