actionbar já renderizando com botões

--- a/test/template/app/index.html
+++ b/test/template/app/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<head>
+<head class="header">
     <meta charset="utf-8">
     <style>
         * {
@@ -10,8 +10,8 @@
         }
 
         view {
-            height: 300px;
-            width: 400px;
+            height: 90%;
+            width: 90%;
             border: solid 1px;
         }
     </style>
@@ -20,11 +20,11 @@
 <body>
     <div class="view">
         <label> nome:
-            <input type="text" /> </label>
+            <input type="text" /> </label> <br />
         <label> endereço:
-            <input type="text" /> </label>
+            <input type="text" /> </label><br />
         <label> telefone:
-            <input type="text" /> </label>
+            <input type="text" /> </label><br />
         <div id='app'></div>
     </div>
     <script src="bundle.js"></script>
