--- a/src/actionbar.less
+++ b/src/actionbar.less
@@ -1,7 +1,23 @@
 .h_actionbar{
     position: absolute;
     bottom: 0;
-    background-color: aquamarine;
+    background-color: #FFFFFF;
     width: 100%;
-    height: 10%;
+    position:fixed;
+    height: 80px;
+	box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.5);
+}
+
+.position_kinds_major{
+    display: table;
+    float: right;
+
+}
+
+.position_kinds_minor{
+    display: table;
+    float: left;
+
 }
