--- a/src/actionbar.less
+++ b/src/actionbar.less
@@ -4,7 +4,8 @@
     background-color: #FFFFFF;
     width: 100%;
     position:fixed;
-    height: 80px;
+    height: 70px;
+    padding-top: 10px;
 	box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.5);
 	-moz-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.5);
 	-webkit-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.5);
