--- a/test/template/app/index.html
+++ b/test/template/app/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="view">
         <label> nome:
-            <input type="text" /> </label> <br />
+            <input type="text" class="nome" /> </label> <br />
         <label> endereço:
             <input type="text" /> </label><br />
         <label> telefone:
