menudropdown no actionbar

--- a/test/template/app/index.html
+++ b/test/template/app/index.html
@@ -16,7 +16,7 @@
         }
     </style>
 </head>
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <body>
     <div class="view">
         <label> nome:
