--- a/src/actionbar.less
+++ b/src/actionbar.less
@@ -29,3 +29,13 @@
     float: right;
     margin-right: -45px !important;
 }
+
+
+.position_icon_actionbar{
+    display: table;
+    float: left;
+    margin-left: 8px;
+    margin-right: 15px;
+    margin-top: 6px;
+
+}
