bug on click do menudrop down

--- a/src/actionbar.less
+++ b/src/actionbar.less
@@ -11,13 +11,13 @@
 	-webkit-box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.5);
 }
 
-.position_kinds_major{
+.position_right{
     display: table;
     float: right;
 
 }
 
-.position_kinds_minor{
+.position_left{
     display: table;
     float: left;
 
