--- a/src/actionbar.less
+++ b/src/actionbar.less
@@ -14,12 +14,14 @@
 .position_right{
     display: table;
     float: right;
+    right: 20px;
 
 }
 
 .position_left{
     display: table;
     float: left;
+    left: 20px;
 
 }
 
@@ -34,9 +36,12 @@
 .position_icon_actionbar{
     display: table;
     float: left;
-    margin-left: 15px;
-    margin-right: 15px;
+    left: 20px;
     margin-top: 6px;
     cursor: pointer;
 
+}
+
+.position_actions_tertiary{
+    left: 40px;
 }
