--- a/test/template/app/index.html
+++ b/test/template/app/index.html
@@ -2,6 +2,7 @@
 
 <head class="header">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <style>
         * {
             margin: 0px;
