--- a/src/actionbar.less
+++ b/src/actionbar.less
@@ -1,42 +1,38 @@
-.h_actionbar{
+.h_actionbar {
     bottom: 0;
     width: 100%;
     height: 50px;
     padding-top: 10px;
-	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
-	-moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
-	-webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+    z-index: 200;
 }
 
-.position_right{
+.position_right {
     display: table;
     float: right;
     right: 20px;
-
 }
 
-.position_left{
+.position_left {
     display: table;
     float: left;
     left: 20px;
-
 }
 
-
-.inside_partly{
+.inside_partly {
     display: table;
     float: right;
     margin-right: -45px !important;
 }
 
-
-.position_icon_actionbar{
+.position_icon_actionbar {
     float: left;
     margin-top: -10px;
     cursor: pointer;
-
 }
 
-.position_actions_tertiary{
+.position_actions_tertiary {
     left: 40px;
 }
